# big-ole-orchestrator

./: .gitignore  AGENTS.md  ARCHITECTURAL_DRIFT_REPORT.md  CLAUDE.md  Cargo.toml  NEXT.md  README.md  append_tests.py  clippy_output.txt  cov.txt  cov_missing.txt  cov_output.txt  fix.py  fix2.py  fix_clippy.py  fix_loops.py  fix_rq.py  fix_scaffold.py  fix_vo_api.py  fix_workspace.py  generate_test_plan.py  lcov.info  moon.yml  mutants_output.txt  nextest_output.txt  nextest_t1.txt  nextest_t8.txt  output.txt
.beads/: .beads-credential-key  architecture-refactor.md  last-touched  metadata.json  push-state.json
.beads/backup/: backup_state.json  config.jsonl
.beads/dolt/: repo_state.json
.beads/journal-fix/: implementation.md
.beads/rq-s1-split-workflow/: implementation.md
.beads/rq-s2-terminate-error/: implementation.md
.beads/schemas/: big-ole-orchestrator-20260323222806-mahpwgty.cue  big-ole-orchestrator-20260323222806-mefmginm.cue
.beads/wtf-0iu2/: implementation.md
.beads/wtf-0p0p/: STATE.md  architectural-drift.md  black-hat-review.md  contract.md  implementation.md  kani-justification.md  martin-fowler-tests.md  qa-report.md  qa-review.md  red-queen-report.md  test-defects.md
.beads/wtf-0qg/: defects-round2.md  defects-round3.md  defects-round4.md  defects.md  implementation-round2.md  implementation-round3.md  implementation.md
.beads/wtf-15t/: contract.md  implementation.md  qa-report.md
.beads/wtf-1i2/: contract-spec.md  implementation.md
.beads/wtf-1xz/: contract.md  implementation.md  martin-fowler-tests.md  test-defects-retry.md
.beads/wtf-2bbn/: architectural-drift.md  contract.md  defects.md  implementation.md  kani-justification.md  martin-fowler-tests.md  qa-report.md  red-queen-report.md  test-review.md
.beads/wtf-2nty/: COMPLETION.md  arch-drift-review.md  black-hat-review.md  implementation.md  kani-justification.md  qa-report.md  red-queen-report.md  spec.md
.beads/wtf-3cv7/: COMPLETION.md  arch-drift-review.md  black-hat-review.md  implementation.md  kani-justification.md  qa-report.md  (+2 more)
.claude/: hookify.no-tdd-guard-config.local.md  settings.json
.dolt/: repo_state.json
.moon/: toolchains.yml  workspace.yml
beads/: consolidated.jsonl
crates/vo-api/: Cargo.toml  moon.yml
crates/vo-api/src/handlers/: events.rs  helpers.rs  mod.rs  signal.rs  workflow.rs
crates/vo-api/src/types/: tests.rs
crates/vo-cli/: Cargo.toml  moon.yml
crates/vo-cli/src/: cli.rs  dispatch_mod.rs  lib.rs  lint.rs  lint_targets.rs  main.rs  parse.rs
crates/vo-cli/src/commands/: serve.rs
crates/vo-cli/tests/: integration_tests.rs  proptest_tests.proptest-regressions  proptest_tests.rs  unit_tests.rs
crates/vo-storage/fuzz/: Cargo.toml
crates/vo-storage/fuzz/fuzz_targets/: decode_event_key.rs
crates/vo-worker/: Cargo.toml  moon.yml
crates/vo-worker/src/timer/: loop_impl.rs  mod.rs  record.rs
docs/: ARCHITECTURE.md
mutants.out/: lock.json  outcomes.json
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
(+547 files in other folders)
