[package]
name = "vo-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vo-common = { path = "../vo-common" }
vo-storage = { path = "../vo-storage" }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# NATS
async-nats = { workspace = true }

# Serialization
serde = { workspace = true }
bytes = { workspace = true }
rmp-serde = { workspace = true }

# Utilities
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
